// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ds-tooltip renders a tooltip 1`] = `
<DocumentFragment>
  <ds-tooltip
    class-name="ds-c-tooltip__trigger-icon"
    root-id="1234"
    title="Custom tooltip title text for our web component!"
    trigger-aria-label="tooltip trigger aria label"
  >
    <div
      class="ds-c-tooltip__container"
    >
      <button
        aria-describedby="1234"
        aria-label="tooltip trigger aria label"
        class="ds-c-tooltip__trigger ds-c-tooltip__trigger-icon"
        type="button"
      >
        <ds-tooltip-icon>
          <span
            class="ds-c-tooltip-icon__container"
          >
            <svg
              aria-hidden="true"
              class="ds-c-icon ds-c-icon--info-circle-thin ds-c-tooltip-icon"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 16c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8zm1-3.7V6.4H7v5.9h2zM7 4.9c0 .6.3.9 1 .9s1-.3 1-.9c0-.3-.1-.5-.2-.7-.2-.1-.5-.2-.8-.2-.3 0-.6.1-.8.2-.1.2-.2.4-.2.7z"
                fill-rule="nonzero"
              />
            </svg>
          </span>
          <template />
        </ds-tooltip-icon>
      </button>
      <div
        aria-hidden="true"
        class="ds-c-tooltip"
        data-placement="top"
        id="1234"
        role="tooltip"
        style="max-width: 300px; z-index: 9999;"
      >
        <span
          class="ds-c-tooltip__arrow"
          data-popper-arrow="true"
        />
        <div
          class="ds-c-tooltip__content"
        >
          Custom tooltip title text for our web component!
        </div>
        <span
          class="ds-c-tooltip__interactive-border"
          style="left: -15px; top: -15px; border: 15px solid transparent; z-index: -999;"
        />
      </div>
    </div>
    <template />
  </ds-tooltip>
</DocumentFragment>
`;

exports[`ds-tooltip renders custom trigger component 1`] = `
<a
  aria-describedby="1234"
  aria-label="tooltip trigger aria label"
  class="ds-c-tooltip__trigger ds-c-tooltip__trigger-icon"
  tabindex="0"
>
  Bog standard child content.
</a>
`;

exports[`ds-tooltip renders default trigger icon 1`] = `
<button
  aria-describedby="1234"
  aria-label="tooltip trigger aria label"
  class="ds-c-tooltip__trigger ds-c-tooltip__trigger-icon"
  type="button"
>
  <ds-tooltip-icon>
    <span
      class="ds-c-tooltip-icon__container"
    >
      <svg
        aria-hidden="true"
        class="ds-c-icon ds-c-icon--info-circle-thin ds-c-tooltip-icon"
        viewBox="0 0 16 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 16c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8zm1-3.7V6.4H7v5.9h2zM7 4.9c0 .6.3.9 1 .9s1-.3 1-.9c0-.3-.1-.5-.2-.7-.2-.1-.5-.2-.8-.2-.3 0-.6.1-.8.2-.1.2-.2.4-.2.7z"
          fill-rule="nonzero"
        />
      </svg>
    </span>
    <template />
  </ds-tooltip-icon>
</button>
`;

exports[`ds-tooltip renders dialog tooltip 1`] = `
<div
  aria-hidden="false"
  class="ds-c-tooltip ds-c-tooltip-enter ds-c-tooltip-enter-active"
  data-placement="top"
  id="1234"
  role="dialog"
  style="max-width: 300px; z-index: 9999;"
  tabindex="-1"
>
  <span
    class="ds-c-tooltip__arrow"
    data-popper-arrow="true"
  />
  <div
    class="ds-c-tooltip__content"
  >
    Custom tooltip title text for our web component!
  </div>
</div>
`;

exports[`ds-tooltip renders heading element 1`] = `
<div
  aria-hidden="false"
  class="ds-c-tooltip ds-c-tooltip-enter ds-c-tooltip-enter-active"
  data-placement="top"
  id="1234"
  role="dialog"
  style="max-width: 300px; z-index: 9999;"
  tabindex="-1"
>
  <span
    class="ds-c-tooltip__arrow"
    data-popper-arrow="true"
  />
  <div
    class="ds-c-tooltip__content"
  >
    <div
      class="ds-c-tooltip__header"
    >
      Custom tooltip heading text for our web component!
    </div>
    Custom tooltip title text for our web component!
  </div>
</div>
`;

exports[`ds-tooltip renders heading element and close button 1`] = `
<div
  aria-hidden="false"
  class="ds-c-tooltip ds-c-tooltip-enter ds-c-tooltip-enter-active"
  data-placement="top"
  id="1234"
  role="dialog"
  style="max-width: 300px; z-index: 9999;"
  tabindex="-1"
>
  <span
    class="ds-c-tooltip__arrow"
    data-popper-arrow="true"
  />
  <div
    class="ds-c-tooltip__content"
  >
    <div
      class="ds-c-tooltip__header"
    >
      Custom tooltip heading text for our web component!
      <button
        aria-label="Close"
        class="ds-c-button ds-c-button--small ds-c-button--ghost ds-c-tooltip__close-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="ds-c-icon ds-c-icon--close ds-c-icon--close-thin "
          viewBox="-2 -2 18 18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 13.0332964L13.0332964 0M13.0332964 13.0332964L0 0"
            fill="none"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    Custom tooltip title text for our web component!
  </div>
</div>
`;

exports[`ds-tooltip renders inverse tooltip 1`] = `
<DocumentFragment>
  <ds-tooltip
    class-name="ds-c-tooltip__trigger-icon"
    inversed="true"
    root-id="1234"
    title="Custom tooltip title text for our web component!"
    trigger-aria-label="tooltip trigger aria label"
  >
    <div
      class="ds-c-tooltip__container"
    >
      <button
        aria-describedby="1234"
        aria-label="tooltip trigger aria label"
        class="ds-c-tooltip__trigger ds-c-tooltip__trigger-icon ds-c-tooltip__trigger--inverse"
        type="button"
      >
        <ds-tooltip-icon>
          <span
            class="ds-c-tooltip-icon__container"
          >
            <svg
              aria-hidden="true"
              class="ds-c-icon ds-c-icon--info-circle-thin ds-c-tooltip-icon"
              viewBox="0 0 16 16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 16c-4.4 0-8-3.6-8-8s3.6-8 8-8 8 3.6 8 8-3.6 8-8 8zm1-3.7V6.4H7v5.9h2zM7 4.9c0 .6.3.9 1 .9s1-.3 1-.9c0-.3-.1-.5-.2-.7-.2-.1-.5-.2-.8-.2-.3 0-.6.1-.8.2-.1.2-.2.4-.2.7z"
                fill-rule="nonzero"
              />
            </svg>
          </span>
          <template />
        </ds-tooltip-icon>
      </button>
      <div
        aria-hidden="true"
        class="ds-c-tooltip ds-c-tooltip--inverse"
        data-placement="top"
        id="1234"
        role="tooltip"
        style="max-width: 300px; z-index: 9999;"
      >
        <span
          class="ds-c-tooltip__arrow"
          data-popper-arrow="true"
        />
        <div
          class="ds-c-tooltip__content"
        >
          Custom tooltip title text for our web component!
        </div>
        <span
          class="ds-c-tooltip__interactive-border"
          style="left: -15px; top: -15px; border: 15px solid transparent; z-index: -999;"
        />
      </div>
    </div>
    <template />
  </ds-tooltip>
</DocumentFragment>
`;
